# publishers-rabbitmq

./: .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/: rabbitmq_publisher.py
src/nagare/publishers/: rabbitmq_publisher.py
